--- a/jello/src/app/components/header/header.component.html
+++ b/jello/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
     <h1>{{ title }}</h1>
-    <app-button color="red" text="hello"></app-button>
+    <app-button color="red" text="hello" (buttonClick)="toggleAddTask()" ></app-button>
 </div>
