--- a/jello/src/app/components/task-item/task-item.component.html
+++ b/jello/src/app/components/task-item/task-item.component.html
@@ -1,4 +1,5 @@
 <div class="task">
-    <h3>{{ task.task }}</h3>
+    <h3>{{ task.task }} <fa-icon [icon]="faTimes"></fa-icon></h3>
     <p>{{ task.day }}</p>
+
 </div>
