--- a/jello/src/app/app.component.html
+++ b/jello/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-  <app-header></app-header>
-  <app-tasks></app-tasks>
+  <div class="app">  
+    <app-header></app-header>
+    <app-tasks></app-tasks>
+  </div>
 </div>
