--- a/jello/src/app/components/header/header.component.html
+++ b/jello/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <h1>{{ title }}</h1>
     <app-button 
         color="red" 
-        text="hello" 
+        text="ADD" 
         (buttonClick)="toggleAddTask()" 
         ></app-button>
 </div>
