--- a/jello/src/app/components/task-item/task-item.component.html
+++ b/jello/src/app/components/task-item/task-item.component.html
@@ -1,5 +1,9 @@
 <div class="task">
-    <h3>{{ task.task }} <fa-icon [ngStyle]="{'color': 'red'}" [icon]="faTimes"></fa-icon></h3>
+    <h3>{{ task.task }} 
+        <fa-icon 
+        (click)="onDelete(task)" 
+        [ngStyle]="{'color': 'red'}" 
+        [icon]="faTimes"></fa-icon></h3>
     <p>{{ task.day }}</p>
 
 </div>
