--- a/jello/src/app/components/task-item/task-item.component.html
+++ b/jello/src/app/components/task-item/task-item.component.html
@@ -1,8 +1,15 @@
-<div class="task">
-    <h3>{{ task.task }} 
+<div 
+    [ngClass]="{ reminder: task.reminder }" 
+    class="task"
+    (dblclick)="onToggle(task)"
+>
+    <h3>
+        {{ task.task }} 
         <fa-icon 
-        (click)="onDelete(task)" 
-        [ngStyle]="{'color': 'red'}" 
-        [icon]="faTimes"></fa-icon></h3>
+            (click)="onDelete(task)" 
+            [ngStyle]="{'color': 'red'}" 
+            [icon]="faTimes"
+        ></fa-icon>
+    </h3>
     <p>{{ task.day }}</p>
 </div>
