--- a/jello/src/app/components/add-task/add-task.component.html
+++ b/jello/src/app/components/add-task/add-task.component.html
@@ -1,1 +1,15 @@
-<p>add-task works!</p>
+<form class="add-form">
+    <div class="form-control">
+        <label for="task">Task</label>
+        <input type="text" name="task" id="task" placeholder="Add Task">
+    </div>
+    <div class="form-control">
+        <label for="day">Day & Time</label>
+        <input type="text" name="day" id="day" placeholder="Add Day  & Time">
+    </div>
+    <div class="form-control form-control-check">
+        <label for="reminder">Set Reminder</label>
+        <input type="checkbox" name="reminder" id="reminder">
+    </div>
+    <input type="submit" value="Save Task" class="button">
+</form>
