--- a/jello/src/app/components/button/button.component.html
+++ b/jello/src/app/components/button/button.component.html
@@ -1,1 +1,5 @@
-<button [ngStyle]="{'background-color': color}" class="button" (click)="onClick()">{{ text }}</button>
+<button 
+    [ngStyle]="{'background-color': color}" 
+    class="button" 
+    (click)="onClick()">{{ text }}
+</button>
