--- a/jello/src/app/components/header/header.component.html
+++ b/jello/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header">
     <h1>{{ title }}</h1>
     <app-button 
-        color="red" 
-        text="ADD" 
+        color="{{showAddTask ? 'Green' : 'Red'}}"
+        text="{{showAddTask ? 'Close' : 'Add Task'}}" 
         (buttonClick)="toggleAddTask()" 
         ></app-button>
 </div>
